--- a/gb/20/2/21/n11885738.md
+++ b/gb/20/2/21/n11885738.md
@@ -1,41 +1,41 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共官媒称10万鸭军抗4千亿蝗虫 网民吐槽</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/GettyImages-1201746300-600x400.jpg" />
 <h6>中国国际电视台称，中国将以10万鸭军对抗4千亿蝗虫的侵袭。图为2020年2月17日，乌干达北部地区的一只蝗虫。(SUMY SADURNI/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年02月21日讯】（大纪元记者陈俊村报导）针对多达4,000亿只的<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E8%9D%97%E8%99%AB.md">蝗虫</a>正接近<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md">中国</a>与印度和巴基斯坦的<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83.md">边境</a>，中共喉舌、甫被美国国务院定为政治宣传机构的中共国际电视台（CGTN）声称，由10万只<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E9%B8%AD%E5%AD%90.md">鸭子</a>组成的军队正准备迎击这群蝗虫。有网民质疑这种治蝗方法的效果，认为这只是一种政治宣传。</p>
-<p>中共国际电视台于2月19日在推特上分享一段视频说：“印巴<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83.md">边境</a>4,000亿<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E8%9D%97%E8%99%AB.md">蝗虫</a>正向<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md">中国</a>逼近，10万‘鸭军’紧急集合，严阵以待。”</p>
+<p>【大纪元2020年02月21日讯】（大纪元记者陈俊村报导）针对多达4,000亿只的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%9D%97%E8%99%AB.md#1">蝗虫</a>正接近<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>与印度和巴基斯坦的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83.md#1">边境</a>，中共喉舌、甫被美国国务院定为政治宣传机构的中共国际电视台（CGTN）声称，由10万只<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%B8%AD%E5%AD%90.md#1">鸭子</a>组成的军队正准备迎击这群蝗虫。有网民质疑这种治蝗方法的效果，认为这只是一种政治宣传。</p>
+<p>中共国际电视台于2月19日在推特上分享一段视频说：“印巴<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BE%B9%E5%A2%83.md#1">边境</a>4,000亿<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%9D%97%E8%99%AB.md#1">蝗虫</a>正向<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>逼近，10万‘鸭军’紧急集合，严阵以待。”</p>
 <p>其推文写道，这些“鸭军”在边境集结，以应对蝗灾，但未说明此边境是指何地。</p>
-<figure id="attachment_11885761" style="width: 600px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/locust-2.jpg"><img class="wp-image-11885761 size-large" src="https://i.epochtimes.com/assets/uploads/2020/02/locust-2-600x464.jpg" alt="" width="600" b="464" /></a><figcaption class="wp-caption-text">中国国际电视台称，印巴边境4,000亿蝗虫正向中国逼近，10万“鸭军”紧急集合，严阵以待。（视频撷图）</figcaption></figure>
+<figure id="attachment_11885761" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/locust-2.jpg"><img class="wp-image-11885761 size-large" src="https://i.epochtimes.com/assets/uploads/2020/02/locust-2-600x464.jpg" alt="" width="600" b="464" /></a><figcaption class="wp-caption-text">中国国际电视台称，印巴边境4,000亿蝗虫正向中国逼近，10万“鸭军”紧急集合，严阵以待。（视频撷图）</figcaption></figure>
 <p>本次蝗灾源自非洲东部。目前已有数以千亿计的蝗虫飞越红海，进入欧洲和亚洲西部与南部。</p>
-<p>联合国<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F.md">粮食</a>农业组织（Food and Agriculture Organization of the United Nations）指出，此次蝗灾是东非地区25年来首见，也是肯尼亚过去70年来之最，已经造成粮食短缺的问题。</p>
+<p>联合国<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F.md#1">粮食</a>农业组织（Food and Agriculture Organization of the United Nations）指出，此次蝗灾是东非地区25年来首见，也是肯尼亚过去70年来之最，已经造成粮食短缺的问题。</p>
 </p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en"><a href="https://twitter.com/hashtag/HappeningNow?src=hash&amp;ref_src=twsrc%5Etfw">#HappeningNow</a> <a href="https://twitter.com/FAOBrussels?ref_src=twsrc%5Etfw">@FAOBrussels</a> reports to the <a href="https://twitter.com/EUCouncil?ref_src=twsrc%5Etfw">@EUCouncil</a> COHAFA Working Party on the <a href="https://twitter.com/hashtag/DesertLocust?src=hash&amp;ref_src=twsrc%5Etfw">#DesertLocust</a> crisis.</p>
-<p>The largest locust upsurge in 70 years in <a href="https://twitter.com/hashtag/Kenya?src=hash&amp;ref_src=twsrc%5Etfw">#Kenya</a> and in 25 years in the <a href="https://twitter.com/hashtag/HornofAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#HornofAfrica</a> is wiping out pastures and crops in communities already facing food shortages. <a href="https://t.co/90vIOokWrb"></a><img width="600" src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a href="90vIOokWrb</a></p>
-<p>— FAO Brussels (@FAOBrussels) <a href="https://twitter.com/FAOBrussels/status/1228308567113031680?ref_src=twsrc%5Etfw">February 14, 2020</a></p></blockquote>
+<p dir="ltr" lang="en"><ahref="https://twitter.com/hashtag/HappeningNow?src=hash&amp;ref_src=twsrc%5Etfw">#HappeningNow</a> <ahref="https://twitter.com/FAOBrussels?ref_src=twsrc%5Etfw">@FAOBrussels</a> reports to the <ahref="https://twitter.com/EUCouncil?ref_src=twsrc%5Etfw">@EUCouncil</a> COHAFA Working Party on the <ahref="https://twitter.com/hashtag/DesertLocust?src=hash&amp;ref_src=twsrc%5Etfw">#DesertLocust</a> crisis.</p>
+<p>The largest locust upsurge in 70 years in <ahref="https://twitter.com/hashtag/Kenya?src=hash&amp;ref_src=twsrc%5Etfw">#Kenya</a> and in 25 years in the <ahref="https://twitter.com/hashtag/HornofAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#HornofAfrica</a> is wiping out pastures and crops in communities already facing food shortages. <ahref="https://t.co/90vIOokWrb"></a><img width="600" src="https://raw.githubusercontent.com/tjvrql262/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="90vIOokWrb</a></p>
+<p>— FAO Brussels (@FAOBrussels) <ahref="https://twitter.com/FAOBrussels/status/1228308567113031680?ref_src=twsrc%5Etfw">February 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>该组织还证实，目前印度和巴基斯坦已有大批蝗虫入侵，并在当地造成农业损失。</p>
 <p>巴基斯坦政府已经宣布进入紧急状态。本次蝗灾被视为20年来最严重的一次，已有40%的农作物受灾。</p>
-<p>而印度的灾情也不遑多让。该国驻扎在拉贾斯坦邦（Rajasthan）的70万军队因缺乏<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F.md">粮食</a>不得不撤军。还有学者预测，此次蝗灾将造成该国30%至50%的粮食减产。</p>
+<p>而印度的灾情也不遑多让。该国驻扎在拉贾斯坦邦（Rajasthan）的70万军队因缺乏<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F.md#1">粮食</a>不得不撤军。还有学者预测，此次蝗灾将造成该国30%至50%的粮食减产。</p>
 </p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">The locust are now in Saudi Arabia. Heading towards India and Pakistan. <a href="https://twitter.com/hashtag/NukeTheLocust?src=hash&amp;ref_src=twsrc%5Etfw">#NukeTheLocust</a> <a href="https://t.co/uYkGBij4ae"></a><img width="600" src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a href="uYkGBij4ae</a></p>
-<p>— (@GeniouslyMe) <a href="https://twitter.com/GeniouslyMe/status/1227483472769568768?ref_src=twsrc%5Etfw">February 12, 2020</a></p></blockquote>
+<p dir="ltr" lang="en">The locust are now in Saudi Arabia. Heading towards India and Pakistan. <ahref="https://twitter.com/hashtag/NukeTheLocust?src=hash&amp;ref_src=twsrc%5Etfw">#NukeTheLocust</a> <ahref="https://t.co/uYkGBij4ae"></a><img width="600" src="https://raw.githubusercontent.com/tjvrql262/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uYkGBij4ae</a></p>
+<p>— (@GeniouslyMe) <ahref="https://twitter.com/GeniouslyMe/status/1227483472769568768?ref_src=twsrc%5Etfw">February 12, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>针对中国国际电视台以10万鸭军对抗4千亿蝗虫的说法，不少网民发言质疑或加以调侃。</p>
-<p>“@cscnjzj”说：“每只<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E9%B8%AD%E5%AD%90.md">鸭子</a>一天吃100只蝗虫，一天也才1,000万只，面对千亿级别的蝗虫群和它们每个月增长100倍以上的繁殖力，我只能呵呵你们的智商。”</p>
+<p>“@cscnjzj”说：“每只<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%B8%AD%E5%AD%90.md#1">鸭子</a>一天吃100只蝗虫，一天也才1,000万只，面对千亿级别的蝗虫群和它们每个月增长100倍以上的繁殖力，我只能呵呵你们的智商。”</p>
 <p>“@jeremy1066”说：“除非每只鸭子能吃400万只蝗虫，否则他们需要更多鸭子。”</p>
 <p>“@SLIMPICK3NS”说：“这些是沙漠蝗虫，它们有毒。如果这些鸭子吃了，它们会死掉。”</p>
 <p>“@DanBaks”问道：“这是真的，还是恶作剧？”</p>
 <p>“@DazGarda”回复了这个gif图。</p>
 </p>
 <blockquote class="twitter-tweet" data-conversation="none">
-<p dir="ltr" lang="en">We march !!! <a href="https://t.co/rls1ZDOKkK"></a><img width="600" src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a href="rls1ZDOKkK</a></p>
-<p>— Garda Daz (@DazGarda) <a href="https://twitter.com/DazGarda/status/1230232505560829952?ref_src=twsrc%5Etfw">February 19, 2020</a></p></blockquote>
+<p dir="ltr" lang="en">We march !!! <ahref="https://t.co/rls1ZDOKkK"></a><img width="600" src="https://raw.githubusercontent.com/tjvrql262/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="rls1ZDOKkK</a></p>
+<p>— Garda Daz (@DazGarda) <ahref="https://twitter.com/DazGarda/status/1230232505560829952?ref_src=twsrc%5Etfw">February 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>“@Hey_World_Hello”说：“我已经能想到，消灭蝗虫后的鸭子的各种吃法。”</p>
 <p>“@Dtree19387502”说：“人们最后都有好吃的北京烤鸭。”</p>
@@ -46,38 +46,42 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/21/n11885738.htm">中共官媒称10万鸭军抗4千亿蝗虫 网民吐槽</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883869.htm">新冠肺炎出院人数破万？一线医生揭实情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882754.htm">【翻墙必看】武汉单日近3万人外逃</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883419.htm">【内幕】多地监狱爆新冠疫情 中共不报导</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878288.htm">【新闻看点】封城封区封声 习掀“人民战争”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11878758.md#1">武汉肺炎和沙漠蝗虫威胁大陆食品供应</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11876403.md#1">【拍案惊奇】瘟疫衍生悲剧 千亿蝗虫会进中国？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/17/n11875449.md#1">东非蝗灾肆虐 你必须知道的5件事</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/16/n11872485.md#1">祸不单行 瘟疫肆虐 沙漠蝗虫又达中国边境</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/20/2/21/n11885738.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/21/n11885738.htm">中共官媒称10万鸭军抗4千亿蝗虫 网民吐槽</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/21/n11885738.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
